// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, iOS 390 1`] = `
{
  "lines": 444,
  "sha256": "67c29f357e43a0e52bde2223527446c0c8dbdce88d0c3e4f4908793c115071f3",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 390 1`] = `
{
  "lines": 444,
  "sha256": "67c29f357e43a0e52bde2223527446c0c8dbdce88d0c3e4f4908793c115071f3",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 768 1`] = `
{
  "lines": 444,
  "sha256": "67c29f357e43a0e52bde2223527446c0c8dbdce88d0c3e4f4908793c115071f3",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault?subId=S1 (the detail early return), iOS 390 1`] = `
{
  "lines": 704,
  "sha256": "4dc0f6d6bfcb64e68f723188a99422891b8bbcfaca37695a37ff7789ddd57405",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs add sheet (add-sub), iOS 390 1`] = `
{
  "lines": 817,
  "sha256": "5c262cd398613489be317941f58531362994566883689a7bcf5865065a2862ae",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, iOS 390 1`] = `
{
  "lines": 817,
  "sha256": "f53adf223633295f1c92b67cfdcb9efc4d407a7937f8a7f89a80842ed1562487",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 390 1`] = `
{
  "lines": 817,
  "sha256": "f53adf223633295f1c92b67cfdcb9efc4d407a7937f8a7f89a80842ed1562487",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 768 1`] = `
{
  "lines": 817,
  "sha256": "f53adf223633295f1c92b67cfdcb9efc4d407a7937f8a7f89a80842ed1562487",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs detail open (sub-S1), iOS 390 1`] = `
{
  "lines": 994,
  "sha256": "4fb08b26dfa259acfdce8fc323ac45520fdfcfc99d7234391a660d36ac8f8bb7",
}
`;
